--- a/sheets.tex
+++ b/sheets.tex
@@ -162,9 +162,12 @@
 				\hline
 			\end{tabular}
 		\end{tcolorbox}
+		\img{8255}{8255 外设芯片}
 		\code{simpleio.asm}{实验一}{读取开关量状态取反后送显示}
-		\code{traffic.asm}{实验一}{交通灯}
+%		\code{traffic.asm}{实验一}{交通灯}
 		\code{converter.asm}{样例}{转换小写至大写}
+		\code{banks.asm}{实验二}{奇偶存储奇偶数}
+		\code{digit.asm}{样例}{输入送数码管显示}
 %		\end{tcbraster}
 %		\end{multicols}
 	\end{twocolumn}
